test/arrays/views/localSlice/badFollow.good
badFollow.chpl:17: error: halt reached - array index out of bounds
note: index '26' is not local
